--- a/src/main/java/View/AufgabenBearbeiten/Einzelne/BearbeiteEinzelneDesignaufgabeView.form
+++ b/src/main/java/View/AufgabenBearbeiten/Einzelne/BearbeiteEinzelneDesignaufgabeView.form
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="View.AufgabenBearbeiten.Testat.BearbeiteTestatProgrammieraufgabeView3">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="View.AufgabenBearbeiten.Einzelne.BearbeiteEinzelneDesignaufgabeView">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="860" height="587"/>
+      <xy x="20" y="20" width="707" height="587"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="f65dc" layout-manager="GridLayoutManager" row-count="5" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="795cc" layout-manager="GridLayoutManager" row-count="5" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -16,18 +16,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="9b738" class="javax.swing.JLabel" binding="lblAufgabenText">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="250" height="150"/>
-                <preferred-size width="250" height="150"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Aufgabentext"/>
-            </properties>
-          </component>
-          <component id="f393f" class="javax.swing.JLabel" binding="lblBild">
+          <component id="582f3" class="javax.swing.JLabel" binding="lblBild">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="250" height="150"/>
@@ -35,10 +24,10 @@
               </grid>
             </constraints>
             <properties>
-              <text value="Bild"/>
+              <text value=""/>
             </properties>
           </component>
-          <grid id="27404" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="e8d15" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="6" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -46,7 +35,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="c4f8d" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="c376c" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -54,12 +43,12 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <vspacer id="46db">
+                  <vspacer id="3f882">
                     <constraints>
                       <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
-                  <grid id="e3620" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="226f4" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -67,7 +56,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="70c02" class="javax.swing.JLabel" binding="lblBearbeitungszeitWert">
+                      <component id="2fb55" class="javax.swing.JLabel" binding="lblBearbeitungszeitWert">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                             <minimum-size width="50" height="-1"/>
@@ -78,7 +67,7 @@
                           <text value="10"/>
                         </properties>
                       </component>
-                      <component id="2f7d2" class="javax.swing.JLabel" binding="lblBearbeitungszeit">
+                      <component id="38ada" class="javax.swing.JLabel" binding="lblBearbeitungszeit">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
                             <minimum-size width="150" height="150"/>
@@ -90,7 +79,7 @@
                       </component>
                     </children>
                   </grid>
-                  <grid id="41d87" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="ea2dc" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -98,7 +87,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="138fd" class="javax.swing.JLabel" binding="lblPunktzahl">
+                      <component id="7f39c" class="javax.swing.JLabel" binding="lblPunktzahl">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
                             <minimum-size width="150" height="150"/>
@@ -108,7 +97,7 @@
                           <text value="Punktzahl:"/>
                         </properties>
                       </component>
-                      <component id="eb93a" class="javax.swing.JLabel" binding="lblPunktzahlWert">
+                      <component id="c966f" class="javax.swing.JLabel" binding="lblPunktzahlWert">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                             <minimum-size width="50" height="-1"/>
@@ -121,7 +110,7 @@
                       </component>
                     </children>
                   </grid>
-                  <grid id="7abc" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="d41ac" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -129,7 +118,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="c3b1b" class="javax.swing.JLabel" binding="lblAufgabentyp">
+                      <component id="dbfa5" class="javax.swing.JLabel" binding="lblAufgabentyp">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
                             <minimum-size width="150" height="150"/>
@@ -139,7 +128,7 @@
                           <text value="Aufgabentyp:"/>
                         </properties>
                       </component>
-                      <component id="17508" class="javax.swing.JLabel" binding="lblAufgabentypWert">
+                      <component id="50c80" class="javax.swing.JLabel" binding="lblAufgabentypWert">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                             <minimum-size width="50" height="-1"/>
@@ -156,12 +145,12 @@
               </grid>
             </children>
           </grid>
-          <vspacer id="72d6">
+          <vspacer id="5cd40">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <grid id="5986b" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="275ad" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -169,7 +158,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="5c071" class="javax.swing.JButton" binding="btnAbbrechenTestat">
+              <component id="1f13e" class="javax.swing.JButton" binding="btnAbbrechenEinzel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -177,7 +166,7 @@
                   <text value="Abbrechen"/>
                 </properties>
               </component>
-              <component id="92dd" class="javax.swing.JButton" binding="btnLoesungshinweisTestat">
+              <component id="bf0aa" class="javax.swing.JButton" binding="btnLoesungshinweisEinzel">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -185,59 +174,70 @@
                   <text value="Loesungshinweis"/>
                 </properties>
               </component>
-              <component id="e5e02" class="javax.swing.JButton" binding="btnVoherigeAufgabeTestat">
+              <component id="5eb17" class="javax.swing.JButton" binding="btnZeigeLoesungEinzel">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Voherige Aufgabe"/>
-                </properties>
-              </component>
-              <component id="98d07" class="javax.swing.JButton" binding="btnNaechsteAufgabeTestat">
-                <constraints>
-                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Nächste Aufgabe"/>
-                </properties>
-              </component>
-              <component id="14e70" class="javax.swing.JButton" binding="btnTestatBeenden">
-                <constraints>
-                  <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Testat Beenden"/>
+                  <text value="Lösung"/>
                 </properties>
               </component>
             </children>
           </grid>
-          <hspacer id="6609e">
+          <hspacer id="c8147">
             <constraints>
               <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <hspacer id="7174e">
+          <hspacer id="c7264">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <vspacer id="a2a81">
+          <vspacer id="11552">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="23a91" class="javax.swing.JTextArea" binding="txtUsereingabe">
+          <grid id="27c84" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="2" row-span="2" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="1" column="2" row-span="2" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="25d4c" class="javax.swing.JButton" binding="btnUpload">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Bild hochladen"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <scrollpane id="f21b5">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <minimum-size width="250" height="150"/>
                 <preferred-size width="250" height="150"/>
               </grid>
             </constraints>
             <properties>
-              <editable value="true"/>
-              <text value=""/>
+              <horizontalScrollBarPolicy value="30"/>
+              <verticalScrollBarPolicy value="20"/>
             </properties>
-          </component>
+            <border type="none"/>
+            <children>
+              <component id="80dee" class="javax.swing.JLabel" binding="lblAufgabenText">
+                <constraints/>
+                <properties>
+                  <text value="Label"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
     </children>
