--- a/src/main/java/View/AufgabenBearbeiten/Testat/BearbeiteTestatMuktipleChoiceAufgabeView.form
+++ b/src/main/java/View/AufgabenBearbeiten/Testat/BearbeiteTestatMuktipleChoiceAufgabeView.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="View.AufgabenBearbeiten.Testat.BearbeiteTestatMuktipleChoiceAufgabeView2">
-  <grid id="27dc6" binding="mainpanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="View.AufgabenBearbeiten.Testat.BearbeiteTestatMuktipleChoiceAufgabeView">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="860" height="587"/>
@@ -16,17 +16,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="30226" class="javax.swing.JLabel" binding="lblAufgabenText">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="250" height="150"/>
-                <preferred-size width="250" height="150"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="Aufgabentext"/>
-            </properties>
-          </component>
           <component id="a8383" class="javax.swing.JLabel" binding="lblBild">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
@@ -35,7 +24,7 @@
               </grid>
             </constraints>
             <properties>
-              <text value="Bild"/>
+              <text value=""/>
             </properties>
           </component>
           <grid id="bfa4b" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -161,7 +150,7 @@
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <grid id="45420" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="45420" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -201,24 +190,20 @@
                   <text value="Nächste Aufgabe"/>
                 </properties>
               </component>
-              <component id="63caa" class="javax.swing.JButton" binding="btnTestatBeenden">
-                <constraints>
-                  <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Testat Beenden"/>
-                </properties>
-              </component>
             </children>
           </grid>
           <hspacer id="cb5d9">
             <constraints>
-              <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="14" height="206"/>
+              </grid>
             </constraints>
           </hspacer>
           <hspacer id="fd6fd">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="14" height="206"/>
+              </grid>
             </constraints>
           </hspacer>
           <vspacer id="f9126">
@@ -269,6 +254,24 @@
               </component>
             </children>
           </grid>
+          <scrollpane id="1e7ad">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="250" height="150"/>
+                <preferred-size width="250" height="150"/>
+              </grid>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="c69cf" class="javax.swing.JLabel" binding="lblAufgabenText">
+                <constraints/>
+                <properties>
+                  <text value="Aufgabentext"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
     </children>
