Bewertungs Buttons sind nun bei bereits bewerteten Testaten nicht mehr sichtbar

--- a/src/main/java/View/Lösungen/BewertungenTestat/BewertungMultipleChoiceAufgabeView.form
+++ b/src/main/java/View/Lösungen/BewertungenTestat/BewertungMultipleChoiceAufgabeView.form
@@ -294,6 +294,8 @@
         </constraints>
         <properties>
           <text value="Bewertung speichern"/>
+          <verifyInputWhenFocusTarget value="true"/>
+          <visible value="false"/>
         </properties>
       </component>
     </children>
