--- a/src/main/java/View/Lösungen/BewertungenTestat/BewertungDesignaufgabeView.form
+++ b/src/main/java/View/Lösungen/BewertungenTestat/BewertungDesignaufgabeView.form
@@ -223,6 +223,7 @@
         </constraints>
         <properties>
           <text value="Bewertung speichern"/>
+          <visible value="false"/>
         </properties>
       </component>
     </children>
