--- a/src/main/java/View/Lösungen/BewertungenTestat/BewertungProgrammieraufgabeView.form
+++ b/src/main/java/View/Lösungen/BewertungenTestat/BewertungProgrammieraufgabeView.form
@@ -222,6 +222,7 @@
         </constraints>
         <properties>
           <text value="Bewertung speichern"/>
+          <visible value="false"/>
         </properties>
       </component>
     </children>
